--- a/example/example.css
+++ b/example/example.css
@@ -8,6 +8,11 @@
     * {
         box-sizing: border-box;
     }
+    ul,li {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
     body {
         padding: 0;
         margin: 0;
