--- a/viewportREM.scss
+++ b/viewportREM.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-// 如果你也是使用540作为基数, 引入这份文件可以解决 页面庞大的时候出现的闪现问题.
+// 说明: 如果你也是使用540作为基数, 引入这份文件可以解决 页面庞大的时候出现的闪现问题.
 
 // 安卓系列常见及特殊分辨率机型
 
